vcluster_versioned_docs/version-0.33.0/introduction/gpu-cloud-platform.mdx
---
title: Building a GPU cloud platform
sidebar_label: GPU cloud platform
sidebar_position: 3
sidebar_class_name: host-nodes private-nodes standalone
---

import GlossaryTerm from '@site/src/components/GlossaryTerm';

AI cloud providers face a specific problem: enterprise AI teams expect dedicated Kubernetes clusters with full isolation, GPU Operator support, and the same operational behavior they get from hyperscaler Kubernetes services. Building and operating a real cluster per customer is expensive and operationally unsustainable. Sharing a single cluster across tenants introduces noisy neighbors and hard-to-enforce boundaries.

vCluster solves this by virtualizing the Kubernetes control plane. Every tenant gets a dedicated API server, their own CRDs, RBAC, and a complete cluster experience. From the tenant's perspective it's indistinguishable from a real cluster. For the provider, it provisions in seconds and vCluster Platform manages it centrally — without the overhead of a physical cluster per customer.

## How it fits into your platform

A vCluster deployment has two layers:

1. A **<GlossaryTerm term="control-plane-cluster">Control Plane Cluster</GlossaryTerm>** that hosts the virtualized control planes for your tenant clusters. This can be an existing Kubernetes cluster, a purpose-built cluster, or a [vCluster Standalone](#bootstrap-with-vcluster-standalone) instance on your own infrastructure.
2. **<GlossaryTerm term="tenant-cluster">Tenant clusters</GlossaryTerm>** that run on top of that infrastructure. Each tenant cluster has its own API server, controller manager, data store, and lifecycle.

[vCluster Platform](/platform/) sits above both layers. It handles provisioning, access control, lifecycle management, and node automation across all your tenant clusters and Control Plane Clusters.

## Worker nodes for GPU workloads

The worker node model determines how isolated each tenant's compute is. For AI cloud workloads, the choice typically comes down to whether tenants need fully dedicated infrastructure or whether shared infrastructure with per-tenant node pools is sufficient.

### Private nodes

Each tenant cluster runs on its own dedicated physical nodes, with a separate CNI, CSI, and control plane. No compute, network, or storage is shared. Tenants get full NCCL bandwidth and hardware-level separation.

Private nodes are the right choice for:
- Multi-node distributed training and large model inference
- Customers requiring compliance or regulatory isolation
- Workloads where performance predictability is non-negotiable

[Deploy with private nodes →](../deploy/worker-nodes/private-nodes/README.mdx)

### Shared infrastructure with dedicated node pools

Each tenant cluster gets exclusive access to a labeled node pool on the Control Plane Cluster. Compute is scoped per tenant without provisioning separate infrastructure. CNI, CSI, and platform services are shared.

This is the right choice for:
- Per-tenant GPU node pools with elastic scaling
- Customers who need compute separation but not full infrastructure isolation
- Environments where shared platform services are acceptable

[Dedicated Nodes in the architecture overview →](./architecture.mdx#shared-nodes)

### Add Virtual Nodes for stronger isolation

Virtual Nodes add a strong isolation boundary at the node level using [vNode](https://www.vnode.com/docs/). vNode enforces scheduling boundaries per tenant, giving each tenant its own view of the node environment.

Virtual Nodes are not a deployment model. They are an optional isolation layer that applies to either worker node choice above — private or shared. This makes them valuable when strict per-tenant workload separation is required regardless of how the underlying nodes are deployed.

[Learn about Virtual Nodes →](./architecture.mdx#virtual-nodes)

<!-- vale off -->
## Bootstrap with vCluster Standalone
<!-- vale on -->

Every vCluster deployment needs a Control Plane Cluster. For AI cloud providers standing up infrastructure from scratch, [vCluster Standalone](../deploy/control-plane/binary/README.mdx) is a natural choice.

vCluster Standalone is a complete, zero-dependency Kubernetes distribution. It runs on bare metal or VMs with no dependency on any other Kubernetes distribution. Once deployed, it behaves like any Kubernetes cluster. You install vCluster Platform on top of it, deploy tenant clusters, and join bare metal worker nodes — all using vCluster tooling, with no external dependencies.

This solves the "cluster one" problem: you can bootstrap your entire platform stack from bare metal without adopting another Kubernetes distribution.

[Deploy vCluster Standalone →](../deploy/control-plane/binary/README.mdx)

## Next steps

- [Architecture](./architecture.mdx) — understand control plane deployment options, worker node models, and the syncer
- [Private Nodes](../deploy/worker-nodes/private-nodes/README.mdx) — deploy dedicated GPU infrastructure per tenant
- [vCluster Standalone](../deploy/control-plane/binary/README.mdx) — bootstrap your Control Plane Cluster on bare metal
- [vCluster Platform](/platform/) — centralized management, access control, and node automation
- [vNode](https://www.vnode.com/docs/) — workload isolation layer for GPU tenants
