vcluster_versioned_docs/version-0.36.0/introduction/gpu-cloud-platform.mdx
---
title: Building a GPU cloud platform
sidebar_label: GPU cloud platform
sidebar_position: 3
sidebar_class_name: host-nodes private-nodes standalone
---

import GlossaryTerm from '@site/src/components/GlossaryTerm';

AI cloud providers face a specific problem: enterprise AI teams expect dedicated Kubernetes clusters with full isolation, GPU Operator support, and the same operational behavior they get from hyperscaler Kubernetes services. Building and operating a real cluster per customer is expensive and operationally unsustainable. Sharing a single cluster across tenants introduces noisy neighbors and hard-to-enforce boundaries.

vCluster solves this by virtualizing the Kubernetes control plane. Every tenant gets a dedicated API server, their own CRDs, RBAC, and a complete cluster experience. From the tenant's perspective it's indistinguishable from a real cluster. For the provider, it provisions in seconds and vCluster Platform manages it centrally, without the overhead of a physical cluster per customer.

If your customers consume Kubernetes clusters directly, use the [AI Cloud production path](../production-guide/ai-cloud.mdx). If they consume managed model endpoints through your product API, use the [Inference Provider production path](../production-guide/inference-provider.mdx).

## How it fits into your platform

A vCluster deployment has two layers:

1. A **<GlossaryTerm term="control-plane-cluster">Control Plane Cluster</GlossaryTerm>** that hosts the virtualized control planes for your tenant clusters. This can be an existing Kubernetes cluster, a purpose-built cluster, or a [vCluster Standalone](#bootstrap-with-vcluster-standalone) instance on your own infrastructure.
2. **<GlossaryTerm term="tenant-cluster">Tenant clusters</GlossaryTerm>** that run on top of that infrastructure. Each tenant cluster has its own API server, controller manager, data store, and lifecycle.

[vCluster Platform](/platform/) sits above both layers. It handles provisioning, access control, lifecycle management, and node automation across all your tenant clusters and control plane clusters.

## Worker nodes for GPU workloads

The worker node model determines how isolated each tenant's compute is. For customer-facing AI cloud workloads, private nodes are the model that provides full per-tenant infrastructure isolation. Shared infrastructure with per-tenant node pools is appropriate only for internal or trusted-tenant GPU platforms, not for externally facing or resold offerings. See [Choose a worker node model](../production-guide/choose-worker-node-model.mdx) for the underlying decision criteria.

For details on NVIDIA, AMD, DRA, and other accelerator support, see [GPU and accelerator support](./gpu-and-accelerator-support.mdx).

### Private nodes

Each tenant cluster runs on its own dedicated physical nodes, with a separate CNI, CSI, and control plane. No compute, network, or storage is shared. Tenants get full NCCL bandwidth and hardware-level separation.

Private nodes are the right choice for:
- Multi-node distributed training and large model inference
- Customers requiring compliance or regulatory isolation
- Workloads where performance predictability is non-negotiable

[Deploy with private nodes →](../deploy/worker-nodes/private-nodes/overview.mdx)

### Shared infrastructure with dedicated node pools

Each tenant cluster gets exclusive access to a labeled node pool on the control plane cluster. Compute is scoped per tenant without provisioning separate infrastructure. CNI, CSI, and platform services are shared.

Compute and platform services are shared at the infrastructure level. This model is appropriate only for internal or trusted-tenant GPU platforms. An example is sharing a data center across your own organization's teams. Don't use it for externally facing or resold GPU offerings. For customer-facing GPU clouds, use private nodes.

This model can fit:
- Internal per-team GPU node pools with elastic scaling
- Trusted internal teams that need compute separation but not full infrastructure isolation

[Dedicated Nodes in the architecture overview →](./architecture.mdx#shared-nodes)

### Add Virtual Nodes for stronger isolation

Virtual Nodes add a strong isolation boundary at the node level using [vNode](https://www.vnode.com/docs/). vNode enforces scheduling boundaries per tenant, giving each tenant its own view of the node environment.

Virtual Nodes are not a deployment model. They are an optional isolation layer that applies to either worker node choice above (private or shared). This makes them valuable when strict per-tenant workload separation is required regardless of how the underlying nodes are deployed.

[Learn about Virtual Nodes →](./architecture.mdx#virtual-nodes)

<!-- vale off -->
## Bootstrap with vCluster Standalone
<!-- vale on -->

Every vCluster deployment needs a control plane cluster. For AI cloud providers standing up infrastructure from scratch, [vCluster Standalone](../deploy/control-plane/binary/overview.mdx) is a natural choice.

vCluster Standalone is a complete, zero-dependency Kubernetes distribution. It runs on bare metal or VMs with no dependency on any other Kubernetes distribution. Once deployed, it behaves like any Kubernetes cluster. You install vCluster Platform on top of it, deploy tenant clusters, and join bare metal worker nodes, all using vCluster tooling with no external dependencies.

Combine Standalone with [Private Nodes](../deploy/worker-nodes/private-nodes/overview.mdx) to add accelerators from any supported infrastructure provider, whether that's your own bare metal or a cloud GPU instance joined into a tenant cluster.

This solves the "cluster one" problem: you can bootstrap your entire platform stack from bare metal without adopting another Kubernetes distribution.

[Deploy vCluster Standalone →](../deploy/control-plane/binary/overview.mdx)

## Next steps

- [Architecture](./architecture.mdx) — understand control plane deployment options, worker node models, and the syncer
- [Build for Production](../production-guide/overview.mdx) — choose the path for managed Kubernetes, managed inference endpoints, internal AI platforms, or distributed GPU compute
- [Inference Provider](../production-guide/inference-provider.mdx) — build managed model-serving endpoints on GPU infrastructure
- [Building an inference platform](./inference-platform.mdx) — tenancy models, GPU capacity classes, and endpoint readiness for managed inference
- [GPU and accelerator support](./gpu-and-accelerator-support.mdx) — understand how vCluster works with NVIDIA, AMD, DRA, and other accelerator devices
- [Private Nodes](../deploy/worker-nodes/private-nodes/overview.mdx) — deploy dedicated GPU infrastructure per tenant
- [vCluster Standalone](../deploy/control-plane/binary/overview.mdx) — bootstrap your control plane cluster on bare metal
- [vCluster Platform](/platform/) — centralized management, access control, and node automation
- [vNode](https://www.vnode.com/docs/) — workload isolation layer for GPU tenants
